--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,10 @@
     font-weight: bold;
     font-style: normal;
 	}
-
+@font-face {
+    font-family: 'PFDthin';
+    src: url('../fonts/pfdintextcompprothin.ttf');
+	}
 @font-face {
     font-family: 'DINPro-ligth';
     src: url('../fonts/DINPro-Light.otf');
@@ -1275,6 +1278,8 @@ vew_selector{
         	border-bottom:dotted 1px #000;
         	margin-right:50px;
         	cursor:pointer;
+        	position: relative;
+        	z-index: 1000;
 			}
 
 .good_subscription_menu span{
@@ -3146,6 +3151,249 @@ ul.news_list{
 	font-family: 'DINPro';
 	font-weight: regular;
 }
+.good_subscription_menu{
+	position: relative;
+}
+.comment-form{
+	position: absolute;
+	background: #fff;
+	top: 75px;
+	width: 680px;
+	height: 350px;
+	z-index: 1200;
+	padding-left: 40px;
+	padding-top: 50px;
+	-moz-border-radius: 15px; 
+  -webkit-border-radius: 15px; 
+  -khtml-border-radius: 15px; 
+  border-radius: 15px; 
+  display: none;
+}
+.comment-left{
+	width: 330px;
+	float: left;
+}
+	.comment-left input:nth-child(2), .comment-left textarea{
+		width: 100%;
+	}
+	.comment-left input:nth-child(2){
+		height: 30px;
+		outline: 0;
+		border: 1px solid #a49fa0;
+		border-radius: 20px;
+		padding-left: 15px;
+		margin-top: 20px;
+	}
+	.comment-left textarea{
+		margin-top: 20px;
+		height: 90px;
+		outline: 0;
+		border: 1px solid #a49fa0;
+		border-radius: 10px;
+		padding-left: 15px;
+		padding-top: 5px;
+	}
+.code-image input{
+	width:55%;
+	float: left;
+	border: 1px solid #a49fa0;
+	outline: 0;
+	border-radius: 20px;
+	height: 30px;
+	margin-top: 20px;
+	padding-left: 15px;
+}
+.code-image div:last-child{
+	width: 42%;
+	float: left;
+	height: 40px;
+	border: 1px solid #a49fa0;
+	margin-top: 15px;
+	margin-left: 5px;
+}
+.comment-left button{
+	margin-top: 10px;
+	font-family: 'DINPro';
+	padding-bottom: 6px;
+	cursor: pointer;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	-o-border-radius: 20px;
+	-ms-border-radius: 20px;
+	border-radius: 20px;
+	font-size: 18px;
+	font-weight: bold;
+	color: #fff;
+	width: 180px;
+	height: 40px;
+	outline: 0;
+	border: 0;
+	background: #2088cc;
+	background: -moz-linear-gradient(left, #2088cc 0%, #268dd2 33%, #3198dc 67%, #349bdf 100%);
+	background: -webkit-gradient(linear, left top, right top, color-stop(0%,#2088cc), color-stop(33%,#268dd2), color-stop(67%,#3198dc), color-stop(100%,#349bdf));
+	background: -webkit-linear-gradient(left, #2088cc 0%,#268dd2 33%,#3198dc 67%,#349bdf 100%);
+	background: -o-linear-gradient(left, #2088cc 0%,#268dd2 33%,#3198dc 67%,#349bdf 100%);
+	background: -ms-linear-gradient(left, #2088cc 0%,#268dd2 33%,#3198dc 67%,#349bdf 100%);
+	background: linear-gradient(to right, #2088cc 0%,#268dd2 33%,#3198dc 67%,#349bdf 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2088cc', endColorstr='#349bdf',GradientType=1 );
+}
+.comment-right{
+	width: 265px;
+	float: left;
+	margin-left: 50px;
+}
+.comment_form_mask{
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	margin-top: -40px;
+	width: 100%;
+	height: 100%;
+	background: #c6c6c6;
+	z-index: 999;
+	filter: progid:DXImageTransform.Microsoft.Alpha(opacity=70);
+	-moz-opacity: 0.7;
+	-khtml-opacity: 0.7;
+	-webkit-opacity:0.7;
+	opacity: 0.7;
+	z-index: 999;
+	display: none;
+}
+.comment-left h3{
+	font-size: 40px;
+	color: #221f1f;
+	font-family: 'PFDin-ligth';
+	font-weight:normal;
+    font-style:normal;
+}
+.comment-right p{
+	color: #221f1f;
+	font-family: 'PFDin-ligth';
+	font-weight:normal;
+    font-style:normal;
+    font-size: 30px;
+}
+.comment-right p:nth-child(3){
+	font-size: 13px;
+	color: #221f1f;
+	font-family: 'DINPro';
+	 font-weight: regular;
+    font-style: normal;
+    margin-top: 10px;
+    margin-left: 37px;
+}
+.comment-right p:nth-child(2){
+	margin-top: 10px;
+}
+.comment-right ul{
+      			margin-top:15px;
+      			margin-left: 37px;
+      			}
+
+	      		 .comment-right li{
+	      		 	display:block;
+	      		 	width:49px;
+	      		 	height:49px;
+	      		 	padding:1px;
+	      		 	cursor:pointer;
+	      		 	float:left;
+	      		 	background: url(../images/social.png)no-repeat top left;
+	      		 	margin-left:-18px;
+	      		 	margin-right:24px;
+	      		 	margin-top:6px;
+	      		 	}
+
+	      		 	.comment-right li:hover{
+	                    border:1px solid #2393dd;
+						padding:0px;
+	      		 		}
+
+
+	      		    .comment-right li.lf_vk{
+	      		 		background-position: 8px -494px
+	      		 		}
+	      		 	.comment-right li.lf_fb{
+	      		 		background-position: 6px 6px;
+	      		 		}
+	      		 	.comment-right li.lf_pr{
+	      		 		background-position: 8px -326px;
+	      		 		}
+	      		 	.comment-right li.lf_mail{
+	      		 		 background-position: 8px -162px;
+	      		 		}
+	      		 	.comment-right li.lf_jj{
+	      		 		background-position: 8px -80px;
+	      		 		}
+	      		 	.comment-right li.lf_od{
+	      		 		background-position: 8px -244px;
+	      		 		}
+	      		 	.comment-right li.lf_twit{
+	      		 		background-position: 6px -408px;
+	      		 	}
+.comment-arrow{
+	position: absolute;
+	width: 53px;
+	height: 53px;
+	background: url(../images/arrow-comment.png);
+	top: -26px;
+	left: 174px;
+}
+.comment-close{
+	position: absolute;
+	cursor: pointer;
+	background: url(../images/login_form_close.png);
+	width: 17px;
+	height: 17px;
+	right: 25px;
+	top: 20px;
+}
+.comment-form input, .comment-form textarea{
+	font-size: 16px;
+	font-family: 'DINPro';
+	font-weight: regular;
+    font-style: normal;
+    resize: none;
+}
+.comment-form input::-moz-placeholder{
+	color: #221f1f;
+	background: url(../images/zvezda.png)no-repeat;
+}
+.comment-form input::-webkit-input-placeholder{
+	color: #221f1f;
+	background: url(../images/zvezda.png)no-repeat;
+}
+.comment-form input::-ms-input-placeholder{
+	color: #221f1f;
+	background: url(../images/zvezda.png)no-repeat;
+}
+.comment-form textarea::-moz-placeholder{
+	color: #221f1f;
+	background: url(../images/zvezda.png)no-repeat;
+	background-position: 29% 8px;
+}
+.comment-form textarea::-webkit-input-placeholder{
+	color: #221f1f;
+	background: url(../images/zvezda.png)no-repeat;
+	background-position: 25.7% 4px;
+}
+.comment-form textarea::-ms-input-placeholder{
+	color: #221f1f;
+	background: url(../images/zvezda.png)no-repeat;
+	background-position: 25.7% 4px;
+}
+.comment-form input.name::-webkit-input-placeholder{background-position: 10% 4px;}
+.comment-form input.name::-moz-placeholder{background-position: 14% 4px;}
+.comment-form input.name:-moz-placeholder{background-position: 14% 4px;}
+.comment-form input.name::-ms-input-placeholder{background-position: 10% 4px;}
+.comment-form input.code-image::-webkit-input-placeholder{background-position: 70% 4px;}
+.comment-form input.code-image::-ms-input-placeholder{background-position: 70% 4px;}
+.comment-form input.code-image::-moz-placeholder{background-position: 72.5% 4px;}
+.comment-form input.code-image:-moz-placeholder{background-position: 72.5% 4px;}
+.comment-form input.code-image, .comment-form input.name{
+	padding-bottom: 2px;
+}
+
+
 
 
 @media (max-width: 1226px){
