--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,7 @@ body{
 #colors{
 	display:block;
 	float:left;
+	background: #f8f8f8;
 }
 
 .colors li{
@@ -1080,7 +1081,6 @@ vew_selector{
         	float:left;
         	margin-top:55px;
         	font: 30px/30px PFDin-thin,Open Sans Condensed;
-        	letter-spacing: 0.9px;
         	color:#221f1f;
         	text-decoration:none;
         	border-bottom:dotted 1px #000;
@@ -1091,13 +1091,17 @@ vew_selector{
         	display:block;
         	float:left;
         	margin-top:55px;
-        	font: 30px/30px PFDin-regular,Open Sans Condensed;
-        	letter-spacing: 0.9px;
         	color:#221f1f;
         	text-decoration:none;
         	margin-right:60px;
+        	border-bottom:dotted 1px #000;
+        	font: 30px/30px PFDin-thin,Open Sans Condensed;
 			}
 
+.view.active{
+	font: 30px/30px PFDin-regular,Open Sans Condensed;
+	border-bottom: 0;
+}
 		.doods_item_data	{
          	position:absolute;
          	width:239px;
@@ -1448,7 +1452,7 @@ vew_selector{
 	}
 
 	#items{
-		background:#fff;
+		
 		}
 
 		.baner{
@@ -1634,6 +1638,8 @@ vew_selector{
 		border-right:1px solid #f8f8f8;
 		padding-top:1px;
 		padding-left:1px;
+		position: relative;
+		z-index: 2;
 		}
 
 	.item:hover	{
@@ -1899,6 +1905,7 @@ vew_selector{
 	position:fixed;
 	top:100%;
 	margin-top:-40px;
+	z-index: 3;
 	}
 
 	#footer_menu_content{
@@ -3294,13 +3301,14 @@ ul.news_list{
 	      		 	display:block;
 	      		 	width:49px;
 	      		 	height:49px;
-	      		 	padding:1px;
+	      		 	padding:0px;
 	      		 	cursor:pointer;
 	      		 	float:left;
 	      		 	background: url(../images/social.png)no-repeat top left;
 	      		 	margin-left:-18px;
 	      		 	margin-right:24px;
 	      		 	margin-top:6px;
+	      		 	border: 1px solid #fff
 	      		 	}
 
 	      		 	.comment-right li:hover{
@@ -3392,9 +3400,29 @@ ul.news_list{
 .comment-form input.code-image, .comment-form input.name{
 	padding-bottom: 2px;
 }
-
-
-
+.item-other-color{
+	
+}
+#items .colors{
+	padding-right: 15%;
+	display: none;
+	position: relative;
+}
+.switch span, .switch a{
+	cursor: pointer;
+}
+.img-hands{
+	position: absolute;
+	z-index: 1;
+	top: 100px;
+	right: -215px;
+}
+.hands-bottom{
+	position: absolute;
+	z-index: 1;
+	right: -210px;
+	top: 160px;
+}
 
 @media (max-width: 1226px){
 	.doods_item_data .cat_cost >p{
